--- a/Dazor.Test/Dazor.Test.csproj
+++ b/Dazor.Test/Dazor.Test.csproj
@@ -2,4 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="xunit" Version="2.4.1" />
+  </ItemGroup>
 </Project>
