--- a/Dazor/Dazor.csproj
+++ b/Dazor/Dazor.csproj
@@ -3,4 +3,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.7.82" />
+  </ItemGroup>
 </Project>
