--- a/Dazor/Dazor.csproj
+++ b/Dazor/Dazor.csproj
@@ -2,5 +2,6 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>dazor</AssemblyName>
   </PropertyGroup>
 </Project>
