--- a/Dazor/Dazor.csproj
+++ b/Dazor/Dazor.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>dazor</AssemblyName>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.2" />
+  </ItemGroup>
 </Project>
