Treat warnings as errors, enable strict mode.

--- a/Dazor/Dazor.csproj
+++ b/Dazor/Dazor.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>dazor</AssemblyName>
     <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <Features>strict</Features>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
