--- a/Dazor/Dazor.csproj
+++ b/Dazor/Dazor.csproj
@@ -6,5 +6,6 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.2" />
+    <PackageReference Include="System.Data.HashFunction.xxHash" Version="2.0.0" />
   </ItemGroup>
 </Project>
